Update Jugador, Bateador, Lanzador, Fix Tabla equipo y Jugador